butons align bug

--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@ body {
   font-size: 0.9rem;
   max-width: 200px;
   padding: 0.7rem;
-  height: 2.5rem;
+  min-height: 2.5rem;
   text-transform: capitalize;
   background-color: rgba(51, 131, 228, 0.9);
   color: white;
